--- a/index.html
+++ b/index.html
@@ -19,7 +19,36 @@
     <!--Css-->
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <main>
+        <!--Apresentação-->
+            <section>
+                <article>
+                    <div>
+                        <span class="text-light">
+                            <h1>Transforme Ideia em</h1>
+                            <h1>Soluções Digitais Visionárias</h1>
+                        </span>
+                        <br>
+                        <span class="text-light">
+                            <p>Na Éterium, conectamos você ao futuro da tecnologia. Desde</p>
+                            <p>estratégias digitais até desenvolvimento de sistemas personalizados, </p>
+                            <p>fazemos suas ideias ganharem vida no universo digital.</p>
+                        </span>
+                        <br>
+                        <span>
+                            <a type="button" style="background: var(--color-btn); padding: .5rem 1.5rem !important;" class="btn rounded-pill text-light">Vamos Conectar</a>
+                        </span>
+                    </div>
+                </article>
+            </section>
+        <!--Apresentação-->
+    </main>
+    <footer>
+        
+    </footer>
 </body>
     <!--Js-->
         <!--Js Api-->
