--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </header>
     <main>
         <!--Apresentação-->
-            <section>
-                <article>
+            <section class="p-5 d-flex justify-content-center align-items-center">
+                <article class="container-md">
                     <div>
                         <span class="text-light">
                             <h1>Transforme Ideia em</h1>
@@ -44,6 +44,55 @@
                     </div>
                 </article>
             </section>
+        <!--Apresentação-->
+        <!--Cards-->
+            <section class="d-flex justify-content-center align-items-center">
+                <article class="container-md">
+                    <span class="d-flex d-flex justify-content-evenly">
+                        <a href="https://usewavetech.com.br" target="_blank" rel="noopener noreferrer">
+                            <div class="Card01 d-flex justify-content-center align-items-center">
+                                <img class="w-100" src="./img/wavect.png" alt="Img02">
+                            </div>
+                        </a>
+                        <div id="cards02" class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
+                            <h4>Qualidade,</h4>
+                            <h4>Código limpo e</h4>
+                            <h4>Automatizado.</h4>
+                        </div>
+                        <div id="cards03" class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
+                            <h4>Qualidade,</h4>
+                            <h4>Código limpo e</h4>
+                            <h4>Automatizado.</h4>
+                        </div>
+                        <a href="https://www.bodypowersuplementos.com.br" target="_blank" rel="noopener noreferrer">
+                            <div id="cards04" class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
+                                <img style="width: 140% !important;" class="w-100" src="./img/body.png" alt="Img01">
+                            </div>
+                        </a>
+                    </span>
+                </article>
+            </section>
+        <!--Cards-->
+        <!--Apresentação-->
+            <section class="d-flex justify-content-center align-items-center">
+                <article class="container-md">
+                    <div>
+                        <span class="text-light">
+                            <h1>Inovação que Vai </h1>
+                            <h1>Além do Visível</h1>
+                        </span>
+                        <br>
+                        <span class="text-light">
+                            <p>Na Éterium, acreditamos que as melhores soluções vêm de quem </p>
+                            <p>enxerga além. Somos uma equipe de especialistas em tecnologia que </p>
+                            <p>transforma o “invisível” em soluções digitais práticas e impactantes. </p>
+                            <p>Combinamos criatividade e técnica para levar sua empresa ao próximo </p>
+                            <p>nível — <strong>sempre com o futuro em mente</strong></p>
+                        </span>
+                    </div>
+                </article>
+            </section>
+            <br>
         <!--Apresentação-->
     </main>
     <footer>
