--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <!--Apresentação-->
-            <section class="p-5 d-flex justify-content-center align-items-center">
+            <section class="p-5 d-flex justify-content-center">
                 <article class="container-md">
                     <div>
                         <span class="text-light">
@@ -46,7 +46,7 @@
             </section>
         <!--Apresentação-->
         <!--Cards-->
-            <section class="d-flex justify-content-center align-items-center">
+            <section class="d-flex justify-content-center">
                 <article class="container-md">
                     <span class="d-flex d-flex justify-content-evenly">
                         <a href="https://usewavetech.com.br" target="_blank" rel="noopener noreferrer">
@@ -73,8 +73,8 @@
                 </article>
             </section>
         <!--Cards-->
-        <!--Apresentação-->
-            <section class="d-flex justify-content-center align-items-center">
+        <!--Inovação-->
+            <section class="d-flex justify-content-center">
                 <article class="container-md">
                     <div>
                         <span class="text-light">
@@ -92,14 +92,38 @@
                     </div>
                 </article>
             </section>
-            <br>
-        <!--Apresentação-->
+        <!--Inovação-->
+        <!--Serviços-->
+            <section class="p-5 d-flex justify-content-center align-items-center">
+                <article class="container-md">
+                    <div class="d-flex justify-content-evenly">
+                        <div id="container">
+                            <span id="card">
+                                <span id="fixedDiv" class="text-light">
+                                    <h1>O Que Podemos</h1>
+                                    <h1>Construir Juntos</h1>
+                                </span>
+                            </span>
+                        </div>
+                        <span id="content">
+                            <div class="card02"></div>
+                            <br>
+                            <div class="card02"></div>
+                            <br>
+                            <div class="card02"></div>
+                        </span>
+                    </div>
+                </article>
+            </section>
+        <!--Serviços-->
+        <section style="height: 1000rem;"></section>
     </main>
+    
     <footer>
         
     </footer>
 </body>
-    <!--Js-->
+<script src="./js/scroll.js"></script>
         <!--Js Api-->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <!--Js Api-->
