--- a/index.html
+++ b/index.html
@@ -106,7 +106,25 @@
                             </span>
                         </div>
                         <span id="content">
-                            <div class="card02"></div>
+                            <div class="card02 text-light d-flex justify-content-center align-items-center flex-column">
+                                <span style="gap: 1rem;" class="d-flex align-items-center">
+                                    <span style="border-radius: 100%; padding: 1.5rem 1.5rem !important; background: #3718DF;">
+                                        <svg width="40" height="40" viewBox="0 0 39 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M26.585 23.25C26.715 22.1775 26.8125 21.105 26.8125 20C26.8125 18.895 26.715 17.8225 26.585 16.75H32.0775C32.3375 17.79 32.5 18.8787 32.5 20C32.5 21.1213 32.3375 22.21 32.0775 23.25M23.7087 32.285C24.6838 30.4812 25.4312 28.5312 25.9513 26.5H30.745C29.1706 29.2109 26.6729 31.2645 23.7087 32.285ZM23.3025 23.25H15.6975C15.535 22.1775 15.4375 21.105 15.4375 20C15.4375 18.895 15.535 17.8062 15.6975 16.75H23.3025C23.4487 17.8062 23.5625 18.895 23.5625 20C23.5625 21.105 23.4487 22.1775 23.3025 23.25ZM19.5 32.935C18.1512 30.985 17.0625 28.8237 16.3962 26.5H22.6038C21.9375 28.8237 20.8487 30.985 19.5 32.935ZM13 13.5H8.255C9.81279 10.7814 12.3088 8.72452 15.275 7.715C14.3 9.51875 13.5688 11.4688 13 13.5ZM8.255 26.5H13C13.5688 28.5312 14.3 30.4812 15.275 32.285C12.3147 31.265 9.82197 29.2108 8.255 26.5ZM6.9225 23.25C6.6625 22.21 6.5 21.1213 6.5 20C6.5 18.8787 6.6625 17.79 6.9225 16.75H12.415C12.285 17.8225 12.1875 18.895 12.1875 20C12.1875 21.105 12.285 22.1775 12.415 23.25M19.5 7.04875C20.8487 8.99875 21.9375 11.1762 22.6038 13.5H16.3962C17.0625 11.1762 18.1512 8.99875 19.5 7.04875ZM30.745 13.5H25.9513C25.4419 11.4876 24.6888 9.54492 23.7087 7.715C26.6987 8.73875 29.185 10.8025 30.745 13.5ZM19.5 3.75C10.5137 3.75 3.25 11.0625 3.25 20C3.25 24.3098 4.96205 28.443 8.00951 31.4905C9.51847 32.9994 11.3099 34.1964 13.2814 35.013C15.2529 35.8297 17.366 36.25 19.5 36.25C23.8098 36.25 27.943 34.538 30.9905 31.4905C34.038 28.443 35.75 24.3098 35.75 20C35.75 17.866 35.3297 15.7529 34.513 13.7814C33.6964 11.8099 32.4994 10.0185 30.9905 8.50951C29.4815 7.00056 27.6901 5.8036 25.7186 4.98696C23.7471 4.17032 21.634 3.75 19.5 3.75Z" fill="white"/>
+                                        </svg>
+                                    </span>
+                                    <span>
+                                        <h4>Desenvolvimento</h4>
+                                        <h4>Personalizado</h4>
+                                    </span>
+                                </span>
+                                <br>
+                                <span>
+                                    <p>Sistemas sob medida para as</p>
+                                    <p>necessidades específicas do seu</p>
+                                    <p>negócio.</p>
+                                </span>
+                            </div>
                             <br>
                             <div class="card02"></div>
                             <br>
