--- a/index.html
+++ b/index.html
@@ -185,7 +185,27 @@
                 </article>
             </section>
         <!--Serviços-->
-        <section style="height: 1000rem;"></section>
+        <!--Clientes-->
+            <section class="d-flex justify-content-evenly">
+                <article class="container-md">
+                    <div class="text-light d-flex justify-content-evenly">
+                        <span>
+                            <h1>O Que Nossos</h1>
+                            <h1>Clientes Dizem</h1>
+                        </span>
+                        <span style="gap: 1rem;" class="d-flex">
+                            <div class="card03 rounded">
+
+                            </div>
+                            <div style="background: linear-gradient(121.76deg, #DA35D1 0%, #3718DF 162.54%);" class="card03 rounded">
+
+                            </div>
+                        </span>
+                    </div>
+                </article>
+            </section>
+        <!--Clientes-->
+        <br><br>
     </main>
     
     <footer>
