--- a/index.html
+++ b/index.html
@@ -194,11 +194,41 @@
                             <h1>Clientes Dizem</h1>
                         </span>
                         <span style="gap: 1rem;" class="d-flex">
-                            <div class="card03 rounded">
-
+                            <div class="card03 rounded d-flex justify-content-center align-items-center flex-column">
+                                <span class="d-flex justify-content-center flex-column">
+                                    <div>
+                                        <svg width="35" height="31" viewBox="0 0 35 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M20.44 30.104V20.12C20.44 14.6587 21.5067 10.1787 23.64 6.67999C25.8587 3.18133 29.4 1.048 34.264 0.279999V5.52799C31.3627 5.86933 29.3147 6.97866 28.12 8.856C26.9253 10.7333 26.328 13.72 26.328 17.816L22.488 17.304H34.136V30.104H20.44ZM0.728001 30.104V20.12C0.728001 14.6587 1.79467 10.1787 3.928 6.67999C6.14667 3.18133 9.688 1.048 14.552 0.279999V5.52799C11.6507 5.86933 9.60267 6.97866 8.408 8.856C7.21333 10.7333 6.616 13.72 6.616 17.816L2.776 17.304H14.424V30.104H0.728001Z" fill="white"/>
+                                        </svg>
+                                    </div>
+                                    <br>
+                                    <span>
+                                        <p>A Éterium capturou a visão do nosso</p>
+                                        <p>projeto e superou todas as </p>
+                                        <p>expectativas. Trabalhar com eles foi </p>
+                                        <p>um divisor de águas para nosso</p>
+                                        <p>crescimento."</p>
+                                        <p>– Carlos Almeida</p>
+                                    </span>
+                                </span>
                             </div>
-                            <div style="background: linear-gradient(121.76deg, #DA35D1 0%, #3718DF 162.54%);" class="card03 rounded">
-
+                            <div style="background: linear-gradient(121.76deg, #DA35D1 0%, #3718DF 162.54%);" class="card03 rounded d-flex justify-content-center align-items-center flex-column">
+                                <span class="d-flex justify-content-center flex-column">
+                                    <div>
+                                        <svg width="35" height="31" viewBox="0 0 35 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M20.44 30.104V20.12C20.44 14.6587 21.5067 10.1787 23.64 6.67999C25.8587 3.18133 29.4 1.048 34.264 0.279999V5.52799C31.3627 5.86933 29.3147 6.97866 28.12 8.856C26.9253 10.7333 26.328 13.72 26.328 17.816L22.488 17.304H34.136V30.104H20.44ZM0.728001 30.104V20.12C0.728001 14.6587 1.79467 10.1787 3.928 6.67999C6.14667 3.18133 9.688 1.048 14.552 0.279999V5.52799C11.6507 5.86933 9.60267 6.97866 8.408 8.856C7.21333 10.7333 6.616 13.72 6.616 17.816L2.776 17.304H14.424V30.104H0.728001Z" fill="white"/>
+                                        </svg>
+                                    </div>
+                                    <br>
+                                    <span>
+                                        <p>"Tecnologia avançada com um </p>
+                                        <p>toque humano. Eles realmente </p>
+                                        <p>entendem do que precisávamos e </p>
+                                        <p>um divisor de águas para nosso</p>
+                                        <p>foram além."</p>
+                                        <p>– Fernanda Melo</p>
+                                    </span>
+                                </span>
                             </div>
                         </span>
                     </div>
