--- a/index.html
+++ b/index.html
@@ -235,7 +235,27 @@
                 </article>
             </section>
         <!--Clientes-->
-        <br><br>
+        <!--Captura de leads-->
+            <section class="p-5 d-flex justify-content-center align-items-center">
+                <article class="container-md">
+                    <div class="text-light text-center">
+                        <span>
+                            <h2>Pronto para Conectar Sua Empresa ao Futuro?</h2>
+                        </span>
+                        <br>
+                        <span>
+                            <p>Se você está em busca de uma equipe que <strong>enxerga além e transforma</p>
+                            <p>ideias em soluções</strong>, junte-se a nós. Vamos criar juntos o próximo</p>
+                            <p>grande passo da sua empresa no universo digital.</p>
+                        </span>
+                        <br>
+                        <span>
+                            <a type="button" style="background: var(--color-btn); padding: .5rem 1.5rem !important;" class="btn rounded-pill text-light">Vamos Conectar</a>
+                        </span>
+                    </div>
+                </article>
+            </section>
+        <!--Captura de leads-->
     </main>
     
     <footer>
