--- a/index.html
+++ b/index.html
@@ -24,8 +24,26 @@
     </header>
     <main>
         <!--Apresentação-->
-            <section class="p-5 d-flex justify-content-center">
-                <article class="container-md">
+            <section id="Teste" class="p-5 d-flex justify-content-center">
+                <article class="container-md d-flex">
+                    <span>
+                        <svg style="position: fixed; top: -49rem; left: ;" width="688" height="1060" viewBox="0 0 688 1060" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g filter="url(#filter0_f_1_7)">
+                            <path d="M416 553.5C416 659.539 441.039 835.5 335 835.5C228.961 835.5 224 681.039 224 575C224 468.961 309.961 224 416 224C522.039 224 416 447.461 416 553.5Z" fill="url(#paint0_linear_1_7)"/>
+                            </g>
+                            <defs>
+                            <filter id="filter0_f_1_7" x="0" y="0" width="687.128" height="1059.5" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                            <feGaussianBlur stdDeviation="112" result="effect1_foregroundBlur_1_7"/>
+                            </filter>
+                            <linearGradient id="paint0_linear_1_7" x1="760.5" y1="442.5" x2="760.5" y2="826.5" gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#4054B5"/>
+                            <stop offset="1" stop-color="#7EFCFF"/>
+                            </linearGradient>
+                            </defs>
+                        </svg>
+                    </span>
                     <div>
                         <span class="text-light">
                             <h1>Transforme Ideia em</h1>
@@ -39,21 +57,20 @@
                         </span>
                         <br>
                         <span>
-                            <a type="button" style="background: var(--color-btn); padding: .5rem 1.5rem !important;" class="btn rounded-pill text-light">Vamos Conectar</a>
+                            <a href="#" target="_blank" style="background: var(--color-btn); padding: .5rem 1.5rem !important;" class="btn rounded-pill text-light">Vamos Conectar</a>
                         </span>
                     </div>
                 </article>
             </section>
+        </div> 
         <!--Apresentação-->
         <!--Cards-->
             <section class="d-flex justify-content-center">
                 <article class="container-md">
                     <span class="d-flex d-flex justify-content-evenly">
-                        <a href="https://usewavetech.com.br" target="_blank" rel="noopener noreferrer">
-                            <div class="Card01 d-flex justify-content-center align-items-center">
-                                <img class="w-100" src="./img/wavect.png" alt="Img02">
-                            </div>
-                        </a>
+                        <div class="Card01 d-flex justify-content-center align-items-center">
+                            <img class="w-100" src="./img/wavect.png" alt="Img02">
+                        </div>
                         <div id="cards02" class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
                             <h4>Qualidade,</h4>
                             <h4>Código limpo e</h4>
@@ -64,6 +81,24 @@
                             <h4>Código limpo e</h4>
                             <h4>Automatizado.</h4>
                         </div>
+                        <span>
+                            <svg style="position: fixed; top: -4rem; rigth: -5rem;" width="866" height="922" viewBox="0 0 866 922" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g filter="url(#filter0_f_1_5)">
+                                <path d="M636.082 534.478C670.583 462.081 526.887 281.37 431.162 235.752C335.438 190.134 280.703 293.457 246.202 365.854C211.701 438.251 209.6 642.476 305.325 688.094C401.049 733.712 601.581 606.875 636.082 534.478Z" fill="url(#paint0_linear_1_5)"/>
+                                </g>
+                                <defs>
+                                <filter id="filter0_f_1_5" x="0.494385" y="0.516418" width="864.824" height="921.236" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                                <feGaussianBlur stdDeviation="112" result="effect1_foregroundBlur_1_5"/>
+                                </filter>
+                                <linearGradient id="paint0_linear_1_5" x1="357.057" y1="579.538" x2="481.996" y2="317.366" gradientUnits="userSpaceOnUse">
+                                <stop stop-color="#4054B5"/>
+                                <stop offset="1" stop-color="#DA35D1"/>
+                                </linearGradient>
+                                </defs>
+                            </svg>
+                        </span>
                         <a href="https://www.bodypowersuplementos.com.br" target="_blank" rel="noopener noreferrer">
                             <div id="cards04" class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
                                 <img style="width: 140% !important;" class="w-100" src="./img/body.png" alt="Img01">
@@ -274,7 +309,8 @@
     </footer>
     <br>
 </body>
-<script src="./js/scroll.js"></script>
+    <!--js-->
+        <script src="./js/scroll.js"></script>
         <!--Js Api-->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <!--Js Api-->
