--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="./css/main.css">
         <!--Css Api-->
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+            <script src="https://unpkg.com/scrollreveal"></script>
         <!--Css Api-->
     <!--Css-->
 </head>
@@ -24,27 +25,9 @@
     </header>
     <main>
         <!--Apresentação-->
-            <section id="Teste" class="p-5 d-flex justify-content-center">
+            <section  class="p-5 d-flex justify-content-center">
                 <article class="container-md d-flex">
-                    <span>
-                        <svg style="position: fixed; top: -49rem; left: ;" width="688" height="1060" viewBox="0 0 688 1060" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g filter="url(#filter0_f_1_7)">
-                            <path d="M416 553.5C416 659.539 441.039 835.5 335 835.5C228.961 835.5 224 681.039 224 575C224 468.961 309.961 224 416 224C522.039 224 416 447.461 416 553.5Z" fill="url(#paint0_linear_1_7)"/>
-                            </g>
-                            <defs>
-                            <filter id="filter0_f_1_7" x="0" y="0" width="687.128" height="1059.5" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                            <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                            <feGaussianBlur stdDeviation="112" result="effect1_foregroundBlur_1_7"/>
-                            </filter>
-                            <linearGradient id="paint0_linear_1_7" x1="760.5" y1="442.5" x2="760.5" y2="826.5" gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#4054B5"/>
-                            <stop offset="1" stop-color="#7EFCFF"/>
-                            </linearGradient>
-                            </defs>
-                        </svg>
-                    </span>
-                    <div>
+                    <div id="Texto">
                         <span class="text-light">
                             <h1>Transforme Ideia em</h1>
                             <h1>Soluções Digitais Visionárias</h1>
@@ -101,7 +84,7 @@
                         </span>
                         <a href="https://www.bodypowersuplementos.com.br" target="_blank" rel="noopener noreferrer">
                             <div id="cards04" class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
-                                <img style="width: 140% !important;" class="w-100" src="./img/body.png" alt="Img01">
+                                <img style="width: 170% !important;" class="w-100" src="./img/body.png" alt="Img01">
                             </div>
                         </a>
                     </span>
@@ -109,7 +92,7 @@
             </section>
         <!--Cards-->
         <!--Inovação-->
-            <section class="d-flex justify-content-center">
+            <section id="Texto" class="d-flex justify-content-center">
                 <article class="container-md">
                     <div>
                         <span class="text-light">
@@ -161,7 +144,7 @@
                                 </span>
                             </div>
                             <br>
-                            <div class="card02 text-light d-flex justify-content-center align-items-center flex-column">
+                            <div id="cards05" class="card02 text-light d-flex justify-content-center align-items-center flex-column">
                                 <span style="gap: 2rem;" class="d-flex align-items-center">
                                     <span style="border-radius: 100%; padding: 1.5rem 1.5rem !important; background: #3718DF;">
                                         <svg width="40" height="40" viewBox="0 0 39 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -271,7 +254,7 @@
             </section>
         <!--Clientes-->
         <!--Captura de leads-->
-            <section class="p-5 d-flex justify-content-center align-items-center">
+            <section id="Texto" class="p-5 d-flex justify-content-center align-items-center">
                 <article class="container-md">
                     <div class="text-light text-center">
                         <span>
@@ -311,6 +294,7 @@
 </body>
     <!--js-->
         <script src="./js/scroll.js"></script>
+        <script src="./js/scrollrevel.js"></script>
         <!--Js Api-->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <!--Js Api-->
