--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             <h1>O Que Nossos</h1>
                             <h1>Clientes Dizem</h1>
                         </span>
-                        <span style="gap: 1rem;" class="d-flex">
+                        <span id="card04" style="gap: 1rem;" class="d-flex">
                             <div class="card03 rounded d-flex justify-content-center align-items-center flex-column">
                                 <span class="d-flex justify-content-center flex-column">
                                     <div>
