--- a/index.html
+++ b/index.html
@@ -19,19 +19,7 @@
         <!--Css Api-->
     <!--Css-->
 </head>
-<body onload="loading()">
-    <div class="boxload">
-        <ul class="pre-loader">
-            <li>E</li>
-            <li>T</li>
-            <li>É</li>
-            <li>R</li>
-            <li>I</li>
-            <li>U</li>
-            <li>M</li>
-        </ul>
-    </div>
-    <div class="contentt">
+<body>
         <header>
 
         </header>
@@ -302,7 +290,6 @@
             </article>
         </footer>
         <br>
-    </div>
 </body>
     <!--js-->
         <script>
