--- a/index.html
+++ b/index.html
@@ -19,13 +19,29 @@
         <!--Css Api-->
     <!--Css-->
 </head>
-<body>
-        <header>
-
+    <body>  
+        <header class="d-flex justify-content-center align-items-center p-3">
+            <nav class="navbar navbar-expand-lg container-md">
+                <div class="container-fluid">
+                  <a class="navbar-brand text-light" href="#">
+                    <img style="width: 10%;" src="./img/Logo.webp" alt="" srcset="">
+                    ETÉRIUM</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <div style="gap: 1rem;" class="navbar-nav justify-content: end;">
+                      <a class="nav-link text-light active" aria-current="page" href="#">Home</a>
+                      <a class="nav-link text-light" href="#">Features</a>
+                      <a class="nav-link text-light" href="#">Pricing</a>
+                    </div>
+                  </div>
+                </div>
+              </nav>
         </header>
         <main>
             <!--Apresentação-->
-                <section  class="p-5 d-flex justify-content-center">
+                <section  class="p-4 d-flex justify-content-center">
                     <article class="container-md d-flex">
                         <div id="Texto">
                             <span class="text-light">
@@ -291,7 +307,7 @@
             </article>
         </footer>
         <br>
-</body>
+    </body>
     <!--js-->
         <script>
                 
