--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--Css-->
 </head>
     <body>  
-        <header style="left: 0;right: 0; position: fixed; z-index: 1;" class="d-flex justify-content-center align-items-center p-3">
+        <header class="d-flex justify-content-center align-items-center p-3">
             <nav class="navbar navbar-expand-lg container-md">
                 <div class="container-fluid">
                   <a class="navbar-brand text-light" href="#">
@@ -31,8 +31,8 @@
                   </button>
                   <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div style="gap: 1rem;" class="navbar-nav justify-content: end; align-items-center">
-                      <a class="nav-link text-light active" aria-current="page" href="#">Sobre nós</a>
-                      <a class="nav-link text-light" href="#">Serviços</a>
+                      <a id="Sobre" class="nav-link text-light active" aria-current="page" href="#">Sobre nós</a>
+                      <a id="Servico" class="nav-link text-light" href="#">Serviços</a>
                       <a class="nav-link text-light" href="#">Depoimentos</a>
                       <a href="#" target="_blank" style="background: var(--color-btn); padding: .5rem 1.5rem !important;" class="btn rounded-pill text-light">Vamos Conectar <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgb(255, 255, 255);transform: ;msFilter:;"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.403 5.633A8.919 8.919 0 0 0 12.053 3c-4.948 0-8.976 4.027-8.978 8.977 0 1.582.413 3.126 1.198 4.488L3 21.116l4.759-1.249a8.981 8.981 0 0 0 4.29 1.093h.004c4.947 0 8.975-4.027 8.977-8.977a8.926 8.926 0 0 0-2.627-6.35m-6.35 13.812h-.003a7.446 7.446 0 0 1-3.798-1.041l-.272-.162-2.824.741.753-2.753-.177-.282a7.448 7.448 0 0 1-1.141-3.971c.002-4.114 3.349-7.461 7.465-7.461a7.413 7.413 0 0 1 5.275 2.188 7.42 7.42 0 0 1 2.183 5.279c-.002 4.114-3.349 7.462-7.461 7.462m4.093-5.589c-.225-.113-1.327-.655-1.533-.73-.205-.075-.354-.112-.504.112s-.58.729-.711.879-.262.168-.486.056-.947-.349-1.804-1.113c-.667-.595-1.117-1.329-1.248-1.554s-.014-.346.099-.458c.101-.1.224-.262.336-.393.112-.131.149-.224.224-.374s.038-.281-.019-.393c-.056-.113-.505-1.217-.692-1.666-.181-.435-.366-.377-.504-.383a9.65 9.65 0 0 0-.429-.008.826.826 0 0 0-.599.28c-.206.225-.785.767-.785 1.871s.804 2.171.916 2.321c.112.15 1.582 2.415 3.832 3.387.536.231.954.369 1.279.473.537.171 1.026.146 1.413.089.431-.064 1.327-.542 1.514-1.066.187-.524.187-.973.131-1.067-.056-.094-.207-.151-.43-.263"></path></svg></a>   
                     </div>
@@ -41,9 +41,8 @@
               </nav>
         </header>
         <main>
-            <br><br>
             <!--Apresentação-->
-                <section class="p-5 d-flex justify-content-center">
+                <section class="p-3 d-flex justify-content-center">
                     <article class="container-md d-flex">
                         <div id="Texto">
                             <span class="text-light">
@@ -81,27 +80,9 @@
                                 <h4>Código limpo e</h4>
                                 <h4>Automatizado.</h4>
                             </div>
-                            <span>
-                                <svg style="position: fixed; top: -4rem; rigth: -5rem;" width="866" height="922" viewBox="0 0 866 922" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <g filter="url(#filter0_f_1_5)">
-                                    <path d="M636.082 534.478C670.583 462.081 526.887 281.37 431.162 235.752C335.438 190.134 280.703 293.457 246.202 365.854C211.701 438.251 209.6 642.476 305.325 688.094C401.049 733.712 601.581 606.875 636.082 534.478Z" fill="url(#paint0_linear_1_5)"/>
-                                    </g>
-                                    <defs>
-                                    <filter id="filter0_f_1_5" x="0.494385" y="0.516418" width="864.824" height="921.236" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                                    <feGaussianBlur stdDeviation="112" result="effect1_foregroundBlur_1_5"/>
-                                    </filter>
-                                    <linearGradient id="paint0_linear_1_5" x1="357.057" y1="579.538" x2="481.996" y2="317.366" gradientUnits="userSpaceOnUse">
-                                    <stop stop-color="#4054B5"/>
-                                    <stop offset="1" stop-color="#DA35D1"/>
-                                    </linearGradient>
-                                    </defs>
-                                </svg>
-                            </span>
                             <a href="https://www.bodypowersuplementos.com.br" target="_blank" rel="noopener noreferrer">
                                 <div id="cards04" class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
-                                    <img style="width: 170% !important;" class="w-100" src="./img/body.png" alt="Img01">
+                                    <img style="width: 120% !important;" class="w-100" src="./img/body.png" alt="Img01">
                                 </div>
                             </a>
                         </span>
@@ -109,8 +90,8 @@
                 </section>
             <!--Cards-->
             <!--Inovação-->
-                <section id="Texto" class="d-flex justify-content-center">
-                    <article class="container-md">
+                <section id="nos" class="d-flex justify-content-center">
+                    <article id="Texto" class="container-md">
                         <div>
                             <span class="text-light">
                                 <h1>Inovação que Vai </h1>
@@ -130,7 +111,7 @@
             <!--Inovação-->
             <!--Serviços-->
                 <section class="p-5 d-flex justify-content-center align-items-center">
-                    <article class="container-md">
+                    <article id="Serv" class="container-md">
                         <div class="d-flex justify-content-evenly">
                             <div id="container">
                                 <span id="card">
@@ -311,9 +292,7 @@
         <br>
     </body>
     <!--js-->
-        <script>
-                
-        </script>
+        <script src="./js/maps.js"></script>
         <script src="./js/scroll.js"></script>
         <script src="./js/scrollrevel.js"></script>
         <!--Js Api-->
