--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!--Css-->
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./css/mobile.css">
         <!--Css Api-->
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
             <script src="https://unpkg.com/scrollreveal"></script>
@@ -43,7 +44,7 @@
         <main>
             <!--Apresentação-->
                 <section class="p-3 d-flex justify-content-center">
-                    <article class="container-md d-flex">
+                    <article id="CardsP" class="container-md d-flex">
                         <div id="Texto">
                             <span class="text-light">
                                 <h1>Transforme Ideia em</h1>
@@ -66,7 +67,7 @@
             <!--Cards-->
                 <section class="d-flex justify-content-center">
                     <article class="container-md">
-                        <span class="d-flex d-flex justify-content-evenly">
+                        <span id="CardsP" class="d-flex d-flex justify-content-evenly">
                             <div class="Card01 d-flex justify-content-center align-items-center">
                                 <img class="w-100" src="./img/wavect.png" alt="Img02">
                             </div>
