--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </section>
                 <section id="Mobile" class="d-flex justify-content-center">
                     <article class="container-md d-flex justify-content-center">
-                        <div>
+                        <div class="d-flex flex-column gap">
                             <span class="text-light">
                                 <h1>Transforme Ideia em</h1>
                                 <h1>Soluções Digitais</h1>
