--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </section>
             <!--Apresentação-->
             <!--Cards-->
-                <section class="d-flex justify-content-center">
+                <section id="Desktop" class="d-flex justify-content-center">
                     <article class="container-md">
                         <span id="CardsP" class="d-flex d-flex justify-content-evenly">
                             <div class="Card01 d-flex justify-content-center align-items-center">
@@ -118,6 +118,28 @@
                                     <img style="width: 120% !important;" class="w-100" src="./img/body.png" alt="Img01">
                                 </div>
                             </a>
+                        </span>
+                    </article>
+                </section>
+                <section id="Mobile" class="d-flex justify-content-center">
+                    <article class="container-md">
+                        <span id="CardsP" class="d-flex d-flex justify-content-evenly flex-column align-items-center">
+                            <div class="Card01 d-flex justify-content-center align-items-center">
+                                <img class="w-100" src="./img/wavect.png" alt="Img02">
+                            </div>
+                            <div id="CardsMobile02" class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
+                                <h4>Qualidade,</h4>
+                                <h4>Código limpo e</h4>
+                                <h4>Automatizado.</h4>
+                            </div>
+                            <div class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
+                                <h4>Qualidade,</h4>
+                                <h4>Código limpo e</h4>
+                                <h4>Automatizado.</h4>
+                            </div>
+                            <div id="CardsMobile02" class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
+                                <img style="width: 120% !important;" class="w-100" src="./img/body.png" alt="Img01">
+                            </div>
                         </span>
                     </article>
                 </section>
