--- a/index.html
+++ b/index.html
@@ -121,23 +121,23 @@
                         </span>
                     </article>
                 </section>
-                <section id="Mobile" class="d-flex justify-content-center">
+                <section id="Mobile" class="d-flex justify-content-center Padding">
                     <article class="container-md">
-                        <span id="CardsP" class="d-flex d-flex justify-content-evenly flex-column align-items-center">
-                            <div class="Card01 d-flex justify-content-center align-items-center">
+                        <span id="CardsP" class="d-flex d-flex justify-content-evenly flex-column align-items-center gap">
+                            <div class="Card00 d-flex justify-content-center align-items-center">
                                 <img class="w-100" src="./img/wavect.png" alt="Img02">
                             </div>
-                            <div id="CardsMobile02" class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
+                            <div id="CardsMobile02" class="Card00 text-light d-flex justify-content-center align-items-center flex-column">
                                 <h4>Qualidade,</h4>
                                 <h4>Código limpo e</h4>
                                 <h4>Automatizado.</h4>
                             </div>
-                            <div class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
+                            <div class="Card00 text-light d-flex justify-content-center align-items-center flex-column">
                                 <h4>Qualidade,</h4>
                                 <h4>Código limpo e</h4>
                                 <h4>Automatizado.</h4>
                             </div>
-                            <div id="CardsMobile02" class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
+                            <div id="CardsMobile02" class="Card00 text-light d-flex justify-content-center align-items-center flex-column">
                                 <img style="width: 120% !important;" class="w-100" src="./img/body.png" alt="Img01">
                             </div>
                         </span>
