--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <article class="container-md">
                         <span id="CardsP" class="d-flex d-flex justify-content-evenly flex-column align-items-center gap">
                             <div class="Card00 d-flex justify-content-center align-items-center">
-                                <img class="w-100" src="./img/wavect.png" alt="Img02">
+                                <img style="width: 120% !important;" class="w-100" src="./img/wavect.png" alt="Img02">
                             </div>
                             <div id="CardsMobile02" class="Card00 text-light d-flex justify-content-center align-items-center flex-column">
                                 <h4>Qualidade,</h4>
