--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <link rel="stylesheet" href="./css/main.css">
         <link rel="stylesheet" href="./css/mobile.css">
         <!--Css Api-->
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
             <script src="https://unpkg.com/scrollreveal"></script>
         <!--Css Api-->
     <!--Css-->
@@ -276,14 +277,9 @@
                     </article>
                 </section>
                 <section class="container-md d-flex justify-content-center align-items-center Padding">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-indicators" data-ride="carousel">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                        </div>
+                    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500">
                         <div class="carousel-inner">
-                        <div class="carousel-item active">
+                          <div class="carousel-item active">
                             <div class="card02Mobile text-light d-flex justify-content-center align-items-center flex-column">
                                 <span style="gap: 1rem;" class="d-flex align-items-center">
                                     <span style="border-radius: 100%; padding: 1.5rem 1.5rem !important; background: #3718DF;">
@@ -303,8 +299,8 @@
                                     <p>negócio.</p>
                                 </span>
                             </div>
-                        </div>
-                        <div class="carousel-item">
+                          </div>
+                          <div class="carousel-item">
                             <div class="card02Mobile text-light d-flex justify-content-center align-items-center flex-column">
                                 <span style="gap: 2rem;" class="d-flex align-items-center">
                                     <span style="border-radius: 100%; padding: 1.5rem 1.5rem !important; background: #3718DF;">
@@ -331,8 +327,8 @@
                                     <p>seus desafios em oportunidades.</p>
                                 </span>
                             </div>
-                        </div>
-                        <div class="carousel-item">
+                          </div>
+                          <div class="carousel-item">
                             <div class="card02Mobile text-light d-flex justify-content-center align-items-center flex-column">
                                 <span style="gap: 1rem;" class="d-flex align-items-center">
                                     <span style="border-radius: 100%; padding: 1.5rem 1.5rem !important; background: #3718DF;">
@@ -360,17 +356,17 @@
                                     <p>fluida.</p>
                                 </span>
                             </div>
+                          </div>
                         </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
                         </button>
-                    </div>
+                      </div>
                 </section>
             <!--Serviços-->
             <!--Clientes-->
@@ -468,7 +464,6 @@
         <script src="./js/scroll.js"></script>
         <script src="./js/scrollrevel.js"></script>
         <!--Js Api-->
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <!--Js Api-->
     <!--Js-->
