--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                         </div>
                     </article>
                 </section>
-                <section id="Mobile" class="d-flex justify-content-center">
+                <section id="Mobile" class="d-flex justify-content-center p-3">
                     <article class="container-md d-flex justify-content-center">
                         <div class="d-flex flex-column gap">
                             <span class="text-light">
