--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
         </footer>
         <footer id="Mobile" class="d-flex justify-content-center p-3">
             <article class="container-md">
-                <div class="text-light d-flex justify-content-center align-items-center">
+                <div class="text-light d-flex justify-content-center align-items-center text-center">
                     <span>
                         <p>Éterium - Copyright © Todos os direitos Reservados |<a href="https://www.instagram.com/eteriumdigitall/" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgb(255, 255, 255);transform: ;msFilter:;">
