--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <article class="container-md">
                         <span id="CardsP" class="d-flex d-flex justify-content-evenly">
                             <div class="Card01 d-flex justify-content-center align-items-center">
-                                <img class="w-100" src="./img/wavect.png" alt="Img02">
+                                <img class="w-100" src="./img/wavect.webp" alt="Img02">
                             </div>
                             <div id="cards02" class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
                                 <h4>Qualidade,</h4>
@@ -116,7 +116,7 @@
                             </div>
                             <a href="https://www.bodypowersuplementos.com.br" target="_blank" rel="noopener noreferrer">
                                 <div id="cards04" class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
-                                    <img style="width: 120% !important;" class="w-100" src="./img/body.png" alt="Img01">
+                                    <img style="width: 120% !important;" class="w-100" src="./img/body.webp" alt="Img01">
                                 </div>
                             </a>
                         </span>
@@ -126,7 +126,7 @@
                     <article class="container-md">
                         <span id="CardsP" class="d-flex d-flex justify-content-evenly flex-column align-items-center gap">
                             <div class="Card00 d-flex justify-content-center align-items-center">
-                                <img style="width: 120% !important;" class="w-100" src="./img/wavect.png" alt="Img02">
+                                <img style="width: 120% !important;" class="w-100" src="./img/wavect.webp" alt="Img02">
                             </div>
                             <div id="CardsMobile02" class="Card00 text-light d-flex justify-content-center align-items-center flex-column">
                                 <h4>Qualidade,</h4>
@@ -139,7 +139,7 @@
                                 <h4>Automatizado.</h4>
                             </div>
                             <div id="CardsMobile02" class="Card00 text-light d-flex justify-content-center align-items-center flex-column">
-                                <img style="width: 120% !important;" class="w-100" src="./img/body.png" alt="Img01">
+                                <img style="width: 120% !important;" class="w-100" src="./img/body.webp" alt="Img01">
                             </div>
                         </span>
                     </article>
