--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
             <!--Clientes-->
             <!--Captura de leads-->
                 <section id="Desktop" class="p-5 d-flex justify-content-center align-items-center">
-                    <article id="Texto" class="container-md">
+                    <article id="Texto" class="container-md d-flex justify-content-evenly align-items-center">
                         <div class="text-light text-center">
                             <span>
                                 <h2>Pronto para Conectar Sua Empresa ao Futuro?</h2>
@@ -488,16 +488,29 @@
                             <br>
                             <span>
                                 <p>Se você está em busca de uma equipe que <strong>enxerga além e transforma</p>
-                                <p>ideias em soluções</strong>, junte-se a nós. Vamos criar juntos o próximo</p>
-                                <p>grande passo da sua empresa no universo digital.</p>
+                                <p>ideias em soluções</strong>, junte-se a nós. Vamos criar juntos o próximo grande</p>
+                                <p>passo da sua empresa no universo digital. Preencha o formulario para entramos</p>
+                                <p>em contato com sua empresa</p>
                             </span>
                             <br>
-                            <span>
-                                <a href="https://api.whatsapp.com/send?phone=5519994673428" target="_blank" style="background: var(--color-btn); padding: .5rem 1.5rem !important;" class="btn rounded-pill text-light">Vamos Conectar <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgb(255, 255, 255);transform: ;msFilter:;"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.403 5.633A8.919 8.919 0 0 0 12.053 3c-4.948 0-8.976 4.027-8.978 8.977 0 1.582.413 3.126 1.198 4.488L3 21.116l4.759-1.249a8.981 8.981 0 0 0 4.29 1.093h.004c4.947 0 8.975-4.027 8.977-8.977a8.926 8.926 0 0 0-2.627-6.35m-6.35 13.812h-.003a7.446 7.446 0 0 1-3.798-1.041l-.272-.162-2.824.741.753-2.753-.177-.282a7.448 7.448 0 0 1-1.141-3.971c.002-4.114 3.349-7.461 7.465-7.461a7.413 7.413 0 0 1 5.275 2.188 7.42 7.42 0 0 1 2.183 5.279c-.002 4.114-3.349 7.462-7.461 7.462m4.093-5.589c-.225-.113-1.327-.655-1.533-.73-.205-.075-.354-.112-.504.112s-.58.729-.711.879-.262.168-.486.056-.947-.349-1.804-1.113c-.667-.595-1.117-1.329-1.248-1.554s-.014-.346.099-.458c.101-.1.224-.262.336-.393.112-.131.149-.224.224-.374s.038-.281-.019-.393c-.056-.113-.505-1.217-.692-1.666-.181-.435-.366-.377-.504-.383a9.65 9.65 0 0 0-.429-.008.826.826 0 0 0-.599.28c-.206.225-.785.767-.785 1.871s.804 2.171.916 2.321c.112.15 1.582 2.415 3.832 3.387.536.231.954.369 1.279.473.537.171 1.026.146 1.413.089.431-.064 1.327-.542 1.514-1.066.187-.524.187-.973.131-1.067-.056-.094-.207-.151-.43-.263"></path></svg></a>
-                            </span>
                         </div>
-                    </article>
-                </section>
+                        <div class="forms text-light">
+                            <form action="#" method="post">
+                                <input type="text" id="nome" name="nome" placeholder="Digite Seu Nome Completo" required>
+                                <input type="email" id="email" placeholder="Digite E-mail" name="email" required>
+                                <input type="tel" id="telefone" name="telefone" placeholder="(XX) XXXXX-XXXX" maxlength="15" required>
+                                <select id="opcoes" name="opcoes" required>
+                                  <option value="" disabled selected>O que você procura ?</option>
+                                  <option value="opcao1">E-commerce</option>
+                                  <option value="opcao2">Sistemas customizados</option>
+                                  <option value="opcao3">Landing pages</option>
+                                  <option value="opcao4">Planilhas interativas </option>
+                                  <option value="opcao5">Desgnir ux/ui</option>
+                                  <option value="opcao5">Sites Completos</option>
+                                  <option value="opcao5">Mais informações</option>
+                                </select>
+                                <button type="submit">Enviar</button>
+                              </form>
                 <section id="Mobile" class="d-flex justify-content-center p-3">
                     <article class="container-md d-flex justify-content-center">
                         <div class="d-flex flex-column gap">
@@ -560,6 +573,20 @@
         </footer>
     </body>
     <!--js-->
+        <script>
+        document.getElementById('telefone').addEventListener('input', function (e) {
+          let value = e.target.value.replace(/\D/g, ''); // Remove todos os caracteres não numéricos
+          
+          if (value.length > 2) {
+            value = '(' + value.substring(0, 2) + ') ' + value.substring(2);
+          }
+          if (value.length > 10) {
+            value = value.substring(0, 10) + '-' + value.substring(10, 15);
+          }
+    
+          e.target.value = value.substring(0, 15); // Mantém o valor no máximo em 15 caracteres
+        });
+      </script>
         <script src="./js/maps.js"></script>
         <script src="./js/scroll.js"></script>
         <script src="./js/scrollrevel.js"></script>
