--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <!--Cards-->
                 <section id="Desktop" class="d-flex justify-content-center">
                     <article class="container-md">
-                        <span id="CardsP" class="d-flex d-flex justify-content-evenly">
+                        <span style="gap: 1rem;" id="CardsP" class="d-flex justify-content-center">
                             <div class="Card01 d-flex justify-content-center align-items-center">
                                 <img style="width: 120% !important;" class="w-100" src="./img/wavect.webp" alt="Img02">
                             </div>
@@ -480,7 +480,7 @@
             <!--Captura de leads-->
                 <section id="Desktop" class="p-5 d-flex justify-content-center align-items-center">
                     <article id="Texto" class="container-md d-flex justify-content-evenly align-items-center">
-                        <div class="text-light text-center">
+                        <div class="text-light">
                             <span>
                                 <h2>Pronto para Conectar Sua Empresa ao Futuro?</h2>
                             </span>
