--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <article class="container-md">
                         <span id="CardsP" class="d-flex d-flex justify-content-evenly flex-column align-items-center gap">
                             <div class="Card00 d-flex justify-content-center align-items-center">
-                                <img style="width: 120% !important;" class="w-100" src="./img/wavect.webp" alt="Img02">
+                                <img class="w-100" src="./img/wavect.webp" alt="Img02">
                             </div>
                             <div id="CardsMobile02" class="Card00 text-light d-flex justify-content-center align-items-center flex-column">
                                 <h4>Qualidade,</h4>
@@ -135,7 +135,7 @@
                                 <h4>Automatizado.</h4>
                             </div>
                             <div id="CardsMobile02" class="Card00 text-light d-flex justify-content-center align-items-center flex-column">
-                                <img style="width: 120% !important;" class="w-100" src="./img/body.webp" alt="Img01">
+                                <img class="w-100" src="./img/body.webp" alt="Img01">
                             </div>
                         </span>
                     </article>
