--- a/index.html
+++ b/index.html
@@ -512,40 +512,42 @@
                 </section>              
                 <section id="Mobile" class="d-flex justify-content-center p-3">
                     <article class="container-md d-flex justify-content-center flex-column">
-                        <div class="d-flex flex-column gap">
-                            <span class="text-light">
-                                <h1>Pronto para Conectar</h1>
-                                <h1>Sua Empresa ao</h1>
-                                <h1>Futuro?</h1>
-                            </span>
-                            <span class="text-light">
-                                <p>Se você está em busca de uma equipe que</p>
-                                <p><strong>enxerga além e transforma ideias em</p>
-                                <p>soluções</strong>, junte-se a nós. Vamos criar juntos</p> 
-                                <p>o próximo grande passo da sua empresa no</p>
-                                <p>ganharem vida no universo digital.</p>
-                                <p>universo digital. Preencha o formulario</p>
-                                <p>para entramos em contato com sua empresa</p>
-                            </span>
-                        </div>
-                        <br>
-                        <div class="forms text-light">
-                            <form style="width: 350px;" action="#" method="post">
-                                <input type="text" id="nome" name="nome" placeholder="Digite Seu Nome Completo" required>
-                                <input type="email" id="email" placeholder="Digite E-mail" name="email" required>
-                                <input type="tel" id="telefone" name="telefone" placeholder="(XX) XXXXX-XXXX" maxlength="15" required>
-                                <select id="opcoes" name="opcoes" required>
-                                  <option value="" disabled selected>O que você procura ?</option>
-                                  <option value="opcao1">E-commerce</option>
-                                  <option value="opcao2">Sistemas customizados</option>
-                                  <option value="opcao3">Landing pages</option>
-                                  <option value="opcao4">Planilhas interativas </option>
-                                  <option value="opcao5">Desgnir ux/ui</option>
-                                  <option value="opcao5">Sites Completos</option>
-                                  <option value="opcao5">Mais informações</option>
-                                </select>
-                                <button type="submit">Enviar</button>
-                              </form>
+                        <div class="d-flex justify-content-center align-items-center flex-column">
+                            <div class="d-flex flex-column gap">
+                                <span class="text-light">
+                                    <h1>Pronto para Conectar</h1>
+                                    <h1>Sua Empresa ao</h1>
+                                    <h1>Futuro?</h1>
+                                </span>
+                                <span class="text-light">
+                                    <p>Se você está em busca de uma equipe que</p>
+                                    <p><strong>enxerga além e transforma ideias em</p>
+                                    <p>soluções</strong>, junte-se a nós. Vamos criar juntos</p> 
+                                    <p>o próximo grande passo da sua empresa no</p>
+                                    <p>ganharem vida no universo digital.</p>
+                                    <p>universo digital. Preencha o formulario</p>
+                                    <p>para entramos em contato com sua empresa</p>
+                                </span>
+                            </div>
+                            <br>
+                            <div class="forms text-light">
+                                <form style="width: 350px;" action="#" method="post">
+                                    <input type="text" id="nome" name="nome" placeholder="Digite Seu Nome Completo" required>
+                                    <input type="email" id="email" placeholder="Digite E-mail" name="email" required>
+                                    <input type="tel" id="telefone" name="telefone" placeholder="(XX) XXXXX-XXXX" maxlength="15" required>
+                                    <select id="opcoes" name="opcoes" required>
+                                    <option value="" disabled selected>O que você procura ?</option>
+                                    <option value="opcao1">E-commerce</option>
+                                    <option value="opcao2">Sistemas customizados</option>
+                                    <option value="opcao3">Landing pages</option>
+                                    <option value="opcao4">Planilhas interativas </option>
+                                    <option value="opcao5">Desgnir ux/ui</option>
+                                    <option value="opcao5">Sites Completos</option>
+                                    <option value="opcao5">Mais informações</option>
+                                    </select>
+                                    <button type="submit">Enviar</button>
+                                </form>
+                            </div>
                         </div>
                     </article>
                 </section>
