--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                                   <option value="opcao5">Sites Completos</option>
                                   <option value="opcao5">Mais informações</option>
                                 </select>
-                                <button type="submit">Enviar</button>
+                                <button class="w-100" type="submit">Enviar</button>
                               </form>
                         </div>
                     </article>
